Updated Hackathon site

--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -55,7 +55,6 @@ permalink: /hackathon/index.html
 			<div class="textBlock__hackathonDate">Saturday November 3, 2018</div>
 			<div id="hackathonCounter" class="textBlock__hackathonCountdown">Start Hacking in...</div>
 			<div class="buttonBlock">
-				<a href="https://utrahacks2018.typeform.com/to/h1PelD"><div class="buttonBlock__twoCol">Register</div></a>
 				<a href="mailto:sponsorhacks@utra.ca"><div class="buttonBlock__twoCol">Sponsor Us</div></a>
 			</div>
 		</div>
@@ -86,8 +85,44 @@ permalink: /hackathon/index.html
 				</div>
 			</div>
 			<p class="aboutFlexContainer__content">2018 is UTRA’s first year hosting this event. Following UTRA’s mission - to foster creativity and innovation, and cultivate science and technology leaders of the future by providing students with the opportunities to design and build advanced robotic technologies. The team started planning for this event with a mindset of “Design, Build, Inspire”. Without limitation on the design scope, we believe this event could bring a variety of brilliant ideas and creative minds together. 13 hours of hacking is a short time for a fully functional and manufacturable product, but ideas and prototypes are always where future technologies start at. </p>
+			<br>
+			<br>
 			<p class="aboutFlexContainer__content">In this event, student teams are required to build a physical prototype within the given time, then pitch to the judges. Judging of the event is based on a few criterias including functionality, innovativity, and most importantly, real-world potential.</p>
+
+			<div class="aboutFlexContainer__divider"></div>
+
+			<div class="aboutRow aboutRow--Prize">
+				<div class="aboutRow__icon">
+					<img src="/Pictures/hackathon/trophy.png" alt="prize">
+				</div>
+				<div class="aboutRow__description">
+					<div class="aboutRow__title">Prize</div>
+					<div class="aboutRow__paragraph">
+						<div class="aboutRow__heading">Prizes for Top 3 Teams</div>
+						<div class="aboutRow__subheading">Plus additional sponsorship prizes</div>
+					 </div>
+				</div>
+			</div>
+
+			<div class="aboutFlexContainer__divider"></div>
+
+			<div class="aboutRow aboutRow--Keynote">
+				<div class="aboutRow__icon">
+					<div class="aboutRow__iconWrapper">
+						<img src="/Pictures/hackathon/keynoteSpeaker.jpg" alt="Micah Stickel">
+					</div>
+				</div>
+				<div class="aboutRow__description">
+					<div class="aboutRow__title">Keynote Speaker</div>
+					<div class="aboutRow__paragraph">
+						<div class="aboutRow__heading">Micah Stickel</div>
+						<div class="aboutRow__subheading">Vice-Dean, First Year</div>
+						<div class="aboutRow__subheading">Faculty of Applied Science and Engineering</div>
+					</div>
+				</div>
+			</div>
 		</div>
+
 	</section>
 
 	<section id="schedule" class="onePagerSection onePagerSection--schedule">
@@ -108,22 +143,17 @@ permalink: /hackathon/index.html
 			</div>
 			<div class="scheduleLegend__item">
 				<svg height="20" width="20">
+					<circle cx="10" cy="10" r="10" fill="#6FCFC9" />  
+				</svg> 
+				<p class="scheduleLegend__itemTitle">Workshops</p>
+			</div>
+			<div class="scheduleLegend__item">
+				<svg height="20" width="20">
 					<circle cx="10" cy="10" r="10" fill="#F2C94C" />  
 				</svg> 
 				<p class="scheduleLegend__itemTitle">Food</p>
 			</div>
-		<!-- 	<div class="scheduleLegend__item">
-				<svg height="20" width="20">
-					<circle cx="10" cy="10" r="10" fill="#6FCFC9" />  
-				</svg> 
-				<p class="scheduleLegend__itemTitle">Fun</p>
-			</div>
-			<div class="scheduleLegend__item">
-				<svg height="20" width="20">
-					<circle cx="10" cy="10" r="10" fill="#C4C4C4" />  
-				</svg> 
-				<p class="scheduleLegend__itemTitle">Others</p>
-			</div> -->
+			
 		</div>
 		
 		<div class="timeTableHeader">
@@ -144,7 +174,7 @@ permalink: /hackathon/index.html
 						</div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--food"></div>
 						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--up">
-							<p>8:00 - 9:00 <a class="timeTable__eventTimeAndDetails--food">| Breakfast + Registration</a></p>
+							<p>8:00 - 9:00 Myhal Lobby <a class="timeTable__eventTimeAndDetails--food">| Breakfast + Registration</a></p>
 						</div>
 					</div>
 				</div>
@@ -175,7 +205,7 @@ permalink: /hackathon/index.html
 							</svg> 
 						</div>
 						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--up">
-							<p>9:00 - 9:30 <a class="timeTable__eventTimeAndDetails--presentation">| Opening Ceremony</a></p>
+							<p>9:00 - 9:30 MY150 <a class="timeTable__eventTimeAndDetails--presentation">| Opening Ceremony</a></p>
 						</div>
 					</div>
 				</div>
@@ -198,6 +228,7 @@ permalink: /hackathon/index.html
 						</div>
 					</div>
 				</div>
+				
 			</div>
 			<!-- 11 AM -->
 			<div class="timeTable__row">
@@ -207,6 +238,22 @@ permalink: /hackathon/index.html
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--main"></div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--main"></div>
+					</div>
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2 timeTable__eventMarkerWrapper--position3">
+						<div class="timeTable__eventDot">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--workshop"></div>
+						<div class="timeTable__eventDot timeTable__eventDot--middleEndDown">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--down">
+							<p>10:30 - 11:00 MY370 <a class="timeTable__eventTimeAndDetails--workshop">| Design for 3d Printing</a></p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -227,7 +274,7 @@ permalink: /hackathon/index.html
 						</div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--food"></div>
 						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--up">
-							<p>12:00 - 13:00 <a class="timeTable__eventTimeAndDetails--food">| Lunch</a></p>
+							<p>12:00 - 13:00 Myhal Lobby <a class="timeTable__eventTimeAndDetails--food">| Lunch</a></p>
 						</div>
 					</div>
 				</div>
@@ -282,6 +329,22 @@ permalink: /hackathon/index.html
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--main"></div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--main"></div>
 					</div>
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2 timeTable__eventMarkerWrapper--position3">
+						<div class="timeTable__eventDot">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--workshop"></div>
+						<div class="timeTable__eventDot timeTable__eventDot--middleEndDown">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--down">
+							<p>15:30 - 16:00 MY370 <a class="timeTable__eventTimeAndDetails--workshop">| Image Processing with ML</a></p>
+						</div>
+					</div>
 				</div>
 			</div>
 			<!-- 5 PM -->
@@ -292,6 +355,22 @@ permalink: /hackathon/index.html
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--main"></div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--main"></div>
+					</div>
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2 timeTable__eventMarkerWrapper--position3">
+						<div class="timeTable__eventDot">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--workshop"></div>
+						<div class="timeTable__eventDot timeTable__eventDot--middleEndDown">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--down">
+							<p>16:30 - 17:00 MY370 <a class="timeTable__eventTimeAndDetails--workshop">| Hardware Security</a></p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -305,14 +384,35 @@ permalink: /hackathon/index.html
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--main"></div>
 					</div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2">
-						<div class="timeTable__eventDot">
+						<div id="dinnerDot" class="timeTable__eventDot">
 							<svg  height="12" width="12">
+								<defs>
+									<clipPath id="cut-off-top">
+										<rect x="0" y="6" width="12" height="6"/>
+									</clipPath>
+								</defs>
 								<circle cx="6" cy="6" r="6" fill="#F2C94C"/>  
 							</svg> 
 						</div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--food"></div>
-						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--up">
-							<p>18:00 - 19:00 <a class="timeTable__eventTimeAndDetails--food">| Dinner</a></p>
+						<!-- <div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--up">
+							<p>18:00 - 19:00 Myhal Lobby <a class="timeTable__eventTimeAndDetails--food">| Dinner</a></p>
+						</div> -->
+					</div>
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2 timeTable__eventMarkerWrapper--position3">
+						<div class="timeTable__eventDot">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--workshop"></div>
+						<div class="timeTable__eventDot timeTable__eventDot--middleEndDown">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#6FCFC9"/>  
+							</svg> 
+						</div>
+						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--down">
+							<p>17:30 - 18:00 MY370 <a class="timeTable__eventTimeAndDetails--workshop">| Team Working</a></p>
 						</div>
 					</div>
 				</div>
@@ -333,6 +433,11 @@ permalink: /hackathon/index.html
 							</svg> 
 						</div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--food"></div>
+					</div>
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2">
+						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--down">
+							<p>18:00 - 19:00 Myhal Lobby <a class="timeTable__eventTimeAndDetails--food">| Dinner</a></p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -379,11 +484,16 @@ permalink: /hackathon/index.html
 				<p class="timeTable__timeHeader">23:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
-					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2">
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--main"></div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--main"></div>
 						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--down">
-							<p>23:30 - 24:00 <a class="timeTable__eventTimeAndDetails--main">| Expo and Judging</a></p>
+							<p>22:30 - 24:00 MY150 <a class="timeTable__eventTimeAndDetails--main">| Expo and Judging</a></p>
+						</div>
+						<div class="timeTable__eventDot timeTable__eventDot--middleEndDown">
+							<svg  height="12" width="12">
+								<circle cx="6" cy="6" r="6" fill="#CD959A"/>  
+							</svg> 
 						</div>
 					</div>
 				</div>
@@ -393,7 +503,7 @@ permalink: /hackathon/index.html
 				<p class="timeTable__timeHeader">24:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
-					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2">
 						<div class="timeTable__eventDot">
 							<svg  height="12" width="12">
 								<circle cx="6" cy="6" r="6" fill="#CD959A"/>  
@@ -401,16 +511,13 @@ permalink: /hackathon/index.html
 						</div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--main"></div>
 					</div>
-					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2">
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
 						<div class="timeTable__eventDot">
 							<svg  height="12" width="12">
 								<circle cx="6" cy="6" r="6" fill="#2F80ED"/>  
 							</svg> 
 						</div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--down timeTable__eventVerticalLine--presentation"></div>
-						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--up">
-							<p>24:00 - 1:00 <a class="timeTable__eventTimeAndDetails--presentation">| Awards and Closing Ceremony</a></p>
-						</div>
 					</div>
 				</div>
 			</div>		
@@ -419,13 +526,16 @@ permalink: /hackathon/index.html
 				<p class="timeTable__timeHeader">01:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
-					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2">
+					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
 						<div class="timeTable__eventDot">
 							<svg  height="12" width="12">
 								<circle cx="6" cy="6" r="6" fill="#2F80ED"/>  
 							</svg> 
 						</div>
 						<div class="timeTable__eventVerticalLine timeTable__eventVerticalLine--up timeTable__eventVerticalLine--presentation"></div>
+						<div class="timeTable__eventTimeAndDetails timeTable__eventTimeAndDetails--down">
+							<p>24:00 - 1:00 MY150 <a class="timeTable__eventTimeAndDetails--presentation">| Awards and Closing Ceremony</a></p>
+						</div>
 					</div>
 				</div>
 			</div>		
@@ -571,9 +681,13 @@ permalink: /hackathon/index.html
 			<a class="sponsorList__img sponsorList__img--particle" href="https://www.particle.io/">
 				<img src="/Pictures/hackathon/sponsors/particle.png" alt="Particle">
 			</a>
-			<a class="sponsorList__img" href="https://www.fdmgroup.com/en-ca/ca-home/">
+			<a class="sponsorList__img sponsorList__img--fdm" href="https://www.fdmgroup.com/en-ca/ca-home/">
 				<img src="/Pictures/hackathon/sponsors/FDM group.jpg" alt="FDM Group">
 			</a>
+			<a class="sponsorList__img sponsorList__img--qualcomm" href="https://www.qualcomm.com/">
+				<img src="/Pictures/hackathon/sponsors/Qualcomm.png" alt="Qualcomm">
+			</a>
+			
 		</div>
 		<!-- Group B -->
 		<div class="sponsorList">
@@ -586,11 +700,14 @@ permalink: /hackathon/index.html
 			<a class="sponsorList__img" href="https://www.irobot.com/">
 				<img src="/Pictures/hackathon/sponsors/irobot.png" alt="irobot">
 			</a>
+			<a class="sponsorList__img" href="http://toronto.thepint.ca/">
+				<img src="/Pictures/hackathon/sponsors/pintlogo.png" alt="Pint">
+			</a>
 			<a class="sponsorList__img" href="https://www.google.com/">
 				<img src="/Pictures/hackathon/sponsors/google.png" alt="Google">
 			</a>
-			<a class="sponsorList__img" href="http://toronto.thepint.ca/">
-				<img src="/Pictures/hackathon/sponsors/pintlogo.png" alt="Pint">
+			<a class="sponsorList__img" href="https://www.solidworks.com/">
+				<img src="/Pictures/hackathon/sponsors/solidworks.png" alt="SolidWorks">
 			</a>
 		</div>
 	</section>
