--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -609,7 +609,7 @@ permalink: /hackathon/index.html
 				<div class="QandA">
 					<h1 class="faq__question">What should I make?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">You can make anything you like! For utraHacks, we are primarily focusing on hardware, however, software hacks are also allowed! If you don’t have an idea, don’t worry and apply anyways, ideas might come to you while you are the event itself.</p>
+						<p class="faq__answer">You can make anything you like! For utraHacks, we are primarily focusing on hardware, however, software hacks are also allowed! If you don’t have an idea, don’t worry and apply anyways, ideas might come to you while you are at the event itself.</p>
 					</div>
 				</div>
 						
