Updated "happening now" to "see you next year"

--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -53,7 +53,7 @@ permalink: /hackathon/index.html
 		<div class="bannerImage__bannerImage__hackathonTextBlock">
 			<div class="textBlock__hackathonTitle">UtraHacks 2018</div>
 			<div class="textBlock__hackathonDate">Saturday November 3, 2018</div>
-			<div id="hackathonCounter" class="textBlock__hackathonCountdown">Happening Now!!</div>
+			<div id="hackathonCounter" class="textBlock__hackathonCountdown">See you next year!</div>
 			<div class="buttonBlock">
 				<a href="mailto:sponsorhacks@utra.ca"><div class="buttonBlock__twoCol">Sponsor Us</div></a>
 			</div>
